# CodePilot-AI

./: .gitignore  LICENSE  README.md  auth.py  main.py  pyproject.toml  routes.py
config/: settings.py
controllers/: workflow_controller.py
graph/: router.py  state.py  workflow.py
graph/nodes/: analyzer_node.py  clone_repo.py  code_indexer.py  commit_message_node.py  (+16 more)
models/: execution_plan.py  final_report.py  generated_file.py  generation_result.py  plan_step.py  repository_analysis.py  repository_context.py  retrieved_chunk.py  review_result.py
services/: json_repair.py  json_utils.py  llm_service.py  repository_service.py
tests/: test_analyzer_node.py  test_chunker.py  test_code_indexer.py  test_commit_message.py  test_context_builder.py  test_dependency_parser.py  test_embedder.py  test_entry_point_detector.py  test_file_writer.py  test_generator.py  test_generator_node.py  test_generator_prompt.py  test_generator_response_parser.py  test_git.py  test_git_analyzer.py  test_git_commit.py  test_git_stage.py  test_indexer_node.py  test_ollama.py  test_ollama_native.py  test_planner.py  test_planner_node.py  test_planner_prompt.py  test_readme_parser.py  test_repository_service.py  test_repository_statistics.py  test_response_parser.py  test_retriever.py  test_retriever_node.py  test_reviewer.py  test_reviewer_node.py  test_reviewer_prompt.py  test_reviewer_response_parser.py  test_tree_builder.py  test_vector_store.py  test_workflow.py  test_writer_node.py
ui/: app.py  apply_runner.py  components.py  dashboard.py  formatters.py  workflow_runner.py
(+33 files in other folders)
