[project]
name = "codepilot-ai"
version = "0.1.0"

description = "An AI Software Engineering Agent built with LangGraph, RAG, Ollama, and ChromaDB."

readme = "README.md"

requires-python = ">=3.12"

authors = [
    {name = "Barathwaj R S"}
]

license = {text = "MIT"}

keywords = [
    "ai",
    "langgraph",
    "rag",
    "ollama",
    "chromadb",
    "software-engineering",
    "agent",
]
dependencies = [
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]
